Fixed blog images on mobile

--- a/_assets/css/scss/pages/_blog.scss
+++ b/_assets/css/scss/pages/_blog.scss
@@ -139,4 +139,9 @@
       margin-top: 20px;
     }
   }
+
+  .blog--image {
+    margin-left: -10px;
+    margin-right: -10px;
+  }
 }
